uipath-commons/main/default/objects/USA_Industry__mdt/USA_Industry__mdt.object-meta.xml
<CustomObject>
    <label>USA Industry</label>
    <pluralLabel>USA Industry</pluralLabel>
</CustomObject>