uipath-commons/main/default/objects/USA_Industry__mdt/fields/Area__c.field-meta.xml
<CustomField>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>