uipath-commons/main/default/objects/USA_Industry__mdt/fields/Industry__c.field-meta.xml
<CustomField>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>