uipath-commons/main/default/objects/USA_Industry__mdt/fields/Territory__c.field-meta.xml
<CustomField>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>