uipath-commons/main/default/objects/USA_Industry__mdt/listViews/My_View.listView-meta.xml
<ListView>
        <fullName>My_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Industry__c</columns>
        <columns>Region__c</columns>
        <columns>Area__c</columns>
        <columns>Territory__c</columns>
        <filterScope>Everything</filterScope>
        <label>My View</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>